<resources>
    <string name="app_name">Natural Browser</string>
    <string name="logo">Logo</string>
    <string name="iron_man_photo">Iron Man Photo</string>
    <string name="enter_url">Enter URL</string>
    <string name="go">Go</string>
    <string name="google">Google</string>
    <string name="youtube">Youtube</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="home">Home</string>
    <string name="reload">Reload</string>
    <string name="natural_browser">Natural Browser</string>
</resources>