<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="1350dp"
        android:layout_height="1796dp"
        android:contentDescription="@string/iron_man_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iron_man" />

    <Button
        android:id="@+id/go"
        android:layout_width="83dp"
        android:layout_height="56dp"
        android:layout_marginStart="622dp"
        android:layout_marginLeft="622dp"
        android:layout_marginTop="1000dp"
        android:layout_marginEnd="640dp"
        android:layout_marginRight="640dp"
        android:layout_marginBottom="100dp"
        android:onClick="go"
        android:text="@string/go"
        app:layout_constraintBottom_toTopOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toEndOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/url"
        app:layout_constraintVertical_bias="0.44" />

    <Button
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="483dp"
        android:layout_marginLeft="483dp"
        android:layout_marginTop="524dp"
        android:layout_marginEnd="500dp"
        android:layout_marginRight="500dp"
        android:layout_marginBottom="18dp"
        android:onClick="google"
        android:text="@string/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toEndOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/background"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/wikipedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="524dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="100dp"
        android:onClick="wikipedia"
        android:text="@string/wikipedia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/youtube"
        app:layout_constraintStart_toEndOf="@+id/google"
        app:layout_constraintTop_toBottomOf="@+id/go"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/youtube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="483dp"
        android:layout_marginLeft="483dp"
        android:layout_marginTop="524dp"
        android:layout_marginEnd="500dp"
        android:layout_marginRight="500dp"
        android:layout_marginBottom="18dp"
        android:onClick="youtube"
        android:text="@string/youtube"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/background"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="3dp"
        android:alpha="0"
        android:onClick="home"
        android:text="@string/home"
        app:layout_constraintEnd_toStartOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:alpha="0"
        android:onClick="reload"
        android:text="@string/reload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="65dp"
        android:layout_height="46dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="6dp"
        android:alpha="0"
        android:contentDescription="@string/logo"
        android:onClick="website"
        app:layout_constraintBottom_toTopOf="@+id/webView"
        app:layout_constraintEnd_toStartOf="@+id/reload"
        app:layout_constraintStart_toEndOf="@+id/home"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/natural" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </WebView>

    <EditText
        android:id="@+id/url"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:layout_marginStart="483dp"
        android:layout_marginLeft="483dp"
        android:layout_marginTop="484dp"
        android:layout_marginEnd="1000dp"
        android:layout_marginRight="1000dp"
        android:layout_marginBottom="500dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_url"
        android:inputType="textUri"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toEndOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/background"
        app:layout_constraintVertical_bias="0.82" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:alpha="0"
        android:max="100"
        android:progress="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>
